index.css
/* ... */
/* SCROLLBAR MODAL */
/* width */
.cart-modal::-webkit-scrollbar {
    width: 10px;
  }
  
  /* Track */
.cart-modal::-webkit-scrollbar-track {
    background: #335C67; 
  }
   
  /* Handle */
.cart-modal::-webkit-scrollbar-thumb {
    background: #E09F3E; 
  }
  
  /* Handle on hover */
.cart-modal::-webkit-scrollbar-thumb:hover {
    background: #FFF3B0; 
  }


.cart-modal-header{
    text-align: center;
    box-sizing: border-box;
    width: 500px;
    background-color: #335C67;
    margin: 0 auto;
    padding: 15px;
    border-bottom: 3px solid #FFF3B0;
    transition: all 0.3s ease-in-out;
    cursor: pointer;
}

.cart-modal-header:hover,
.cart-modal-header:focus    {
    background-color: #E09F3E;
}

.cart-modal-header-hidden {
    border: none;
    width: 300px;
    padding: 10px;
}

.cart-modal-header h3 {
    color: #FFF3B0;
}

.cart-modal-header h3:active {
    color: #FFF;
}

.ordered-items {
    text-align: left;
    border-bottom: #FFF3B0 3px solid;
    padding-bottom: 20px;
}

.ordered-item {
    display: flex;
    justify-content: space-between;
}

.ordered-item a {
    text-decoration: none;
    color: #E09F3E;
    font-size: 11px;
    padding-left: 15px;
    font-family: "Maxx Medium", sans-serif;
}

.subtotal-items,
.delivery {
    display: flex;
    justify-content: space-between;
}

.subtotal-items {
    margin-top: 5px;
}

.subtotal-items p,
.delivery p {
    margin: 10px 0px 0px 0px;
}

.total-items {
    text-align: left;
    display: flex;
    justify-content: space-between;
    font-family: "Frankito Sans Outline", sans-serif;
    font-size: 25px;
    margin-top: 18px;
}

.total-items p {
    margin: 0px;
}

.checkout-div {
    display: flex;
    justify-content: center;
}

.checkout-btn {
    background-color: #064E3B;
    margin: 20px 0px;
    height: 35px;
}
.checkout-btn:enabled:active {
    transform: translateY(1px);
}
.checkout-btn:enabled:hover {
    background-color: #064e3ba8;
}
.checkout-btn:disabled {
    background-color: #540B0E;
    cursor: not-allowed;
}

.total-amount {
    font-family: "Frankito Sans", sans-serif;
}

.empty-cart {
    text-align: center;
    color: #E09F3E;
    font-size: 25px;
}

.cart-hidden {
    /* opacity: 0; */
    max-height: 0; /* OPTIONAL */
    overflow: hidden;
    transition: all 0.3s ease-in-out;
    transition-duration: 0.3s;
    transition-timing-function: ease-in-out;
    transition-delay: 0s;
    transition: padding 0.3s none 1s;
    margin: 0 auto;
    padding-bottom: 0;
    padding-top: 0;
    width: 300px;
}


.checkout-modal {
    display: none;
    box-sizing: border-box;
    background-color: #FFF3B0;
    width: 575px;
    min-height: 650px;
    position: fixed;
    text-align: left;
    top: 5%;
    left: 50%;
    padding: 30px 45px;
    transform: translate(-50%, 0);
    z-index: 2;
    border: 3px solid #540B0E;
}

.checkout-modal h2 {
    font-family: 'Frankito Sans', sans-serif;
    cursor: default;
}

.checkout-modal h3 {
    margin: 30px 0px;
    color: #E09F3E;
}

form {
    padding: 0;
    margin: 0;
    width: 475px;
}

.checkout-modal input {
    height: 70px;
    width: 475px;
    border-radius: 4px;
    border: 1px #540B0E solid;
    margin-bottom: 10px;
    font-size: 20px;
    padding: 10px;
}
.checkout-modal input:last-child {
    margin-bottom: 0px;
}

.checkout-modal button {
    display: block;
    margin: 30px auto 0px auto;
}

#pay-button:disabled {
    background-color: #797979;
    cursor: not-allowed;
}

#zip-postal-input,
#city-input,
#exp-input,
#ccv-input {
    width: 225px;
}

.credit-card-div{
    display: inline;
    display: flex;
    width: 475px;
    justify-content: space-between;

}

/* Chrome, Safari, Edge, Opera */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  appearance: none;
  margin: 0;
}

/* Firefox */
input[type=number] {
  -moz-appearance: textfield;
}

#coupon-code {
    padding: 5px;
    border-radius: 4px;
    color: #540B0E;
    width: 370px;
}

#coupon-code:disabled {
    color: #797979;
    border: 2px solid #797979;
    cursor: not-allowed;
}

#coupon-code::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
    color: #E09F3E;
    opacity: 1; /* Firefox */
  }
#coupon-code:-ms-input-placeholder { /* Internet Explorer 10-11 */
    color: #E09F3E;
  }
#coupon-code::-ms-input-placeholder { /* Microsoft Edge */
    color: #E09F3E;
  }

#coupon-code:focus-visible {
    border: 2px solid #E09F3E;
}

.coupons-code {
    width: 475px;
    margin: 10px 0px 0px 0px;
    display: flex;
    justify-content: space-between;
}

.coupons-code button {
    background-color: #064E3B;
    width: 90px;
    height: 50px;
    padding: 0;
    margin: 10px 0px;
}

.coupons-code button:disabled {
    background-color: #797979;
    cursor: not-allowed;
}

.discount-overview {
    display: none;
    justify-content: space-between;
}

.checkout-subtotal {
    display: flex;
    justify-content: space-between;
    font-size: 20px;
    margin: 0;
    color: #335C67;
}

.checkout-subtotal p,
.total-to-pay p {
    margin: 0;
}

#checkout-modal-close {
    width: 25px;
    height: 25px;
    border-radius: 20px;
    position: absolute;
    right: 45px;
    top: 10px;
}

.total-to-pay {
    display: none;
    justify-content: space-between;
    font-size: 25px;
    margin: 0;
    color: #335C67;
}

#loading-img {
    display: none;
    background-color: #FFF3B0;
}

.paymentloading {
    display: block;
    margin: 100px auto;
    text-align: center;
}

.paymentsuccess {
    display: block;
    margin: 100px auto;
    text-align: center;
}



.animation-ctn{
    text-align:center;
    margin-top:5em;
}
  
@-webkit-keyframes checkmark {
    0% {
        stroke-dashoffset: 100px
    }

    100% {
        stroke-dashoffset: 200px
    }
}
  
@-ms-keyframes checkmark {
    0% {
        stroke-dashoffset: 100px
    }

    100% {
        stroke-dashoffset: 200px
    }
}
/* ... */

